--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ opencv-python==4.5.5.64
 numpy>=1.24.3
 requests>=2.29.0
 tkintermapview @ git+https://github.com/DarkLord76865/TkinterMapView@main
+pyinstaller>=5.10.1
